# demo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  test.json
db/: init_db.sql
include/: cacheRecord.hpp  calculator.h  checker.h  loggerWrapper.h  operation.hpp  parsedArgs.h  parsedArgs.hpp  parser.h  printer.h  runner.h
lib/: CMakeLists.txt  math.cpp  math.h
proto/: calc.proto
src/: IDatabase.hpp  ILogger.hpp  calcClient.cpp  calculationStorage.hpp  calculator.cpp  calculator.hpp  checker.cpp  checker.hpp  loggerWrapper.cpp  loggerWrapper.hpp  main.cpp  parser.cpp  parser.hpp  postgresDatabase.hpp  printer.cpp  printer.hpp  runner.cpp  runner.hpp  spdLogger.hpp
tests/: CMakeLists.txt  calculatorGrpcTest.cpp  testSanity.cpp
utils/: converters.hpp
